# yalich

./: Cargo.toml  Makefile  README.md
.circleci/: config.yml
examples/basic/: Cargo.toml  output.csv  package.json  pyproject.toml  run.sh  yalich.toml
img/: data-flow.mermaid
src/: core.rs  cratesio.rs  github.rs  lib.rs  npmjs.rs  pypi.rs
src/node/: mod.rs  npmjs.rs  packagejson.rs
src/python/: mod.rs  pyproject.rs
src/rust/: cargo.rs  cratesio.rs  mod.rs
