[package]
name = "yalich"
version = "0.1.0"
authors = ["Tom Milligan <tommilligan@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
csv = "1.1.3"
once_cell = "1.4.0"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.53"
structopt = "0.3.14"
toml = "0.5.6"
url = "2.1.1"
